dev (unreleased)
----------------
- App skeleton:

  + Simplify home page and add a Mako site template that can be easily
    extended by the user.

1.0b2 (2011-03-19)
------------------
- App skeleton:

  + Add Beaker cache configuration
  + Fix bug in urlgenerator: missing variable assignment

1.0b1 (2011-03-19)
------------------
- Rename distribution to Akhet and app template to akhet.
- Delete all code pertaining to the SQLAlchemy library, which is now in the
  "SQLAHelper" package.
- ``URLGenerator`` makes generating route URLs and other application URLs
  more convenient.
- App template:

  + Change ``handlers`` to a package and refactor for larger applications.
  + Change ``models`` to a package.
  + Create a ``lib`` package and move helpers.py to it as Pylons does.
  + Add commented examples of advanced usages in init and base handler.
  + The ``url`` template global is now a URLGenerator instance. You can still
    call it as before to generate a route URL but don't pass the ``request``
    arg any more. The URL generator is also available in views as
    ``self.request.url_generator``.
  + Create the SQLAlchemy engine ourself; SQLAHelper no longer does this.
  + Change "[app:{{project}}]" to "[app:myapp]" in INI files so that the name
    is well known and easier to type on the command line (e.g., for 'pshell').
  + Ask whether to configure SQLAlchemy.
  + Switch to ``pyramid_tm`` transaction manager from ``repoze.tm2``.

- 'akhet/tests/make_test_app.sh' is a quick-and-dirty script to create and run
  a test application.

Repository Akhet created
------------------------
Repository "Akhet" was cloned from "pyramid_sqla" at this point.
All tags "vVERSION" were renamed to "pyramid_sqla-VERSION". A new tag
"pyramid_sqla-dev" points to the last code change before the split.


pyramid_sqla-dev (never released; changeset c0c74051c201)
---------------------------------------------------------