@@ -8,13 +8,7 @@
   framework, part of the Pylons Project.
 </p>
 
-<h2>Search Pyramid documentation</h2>
-<form method="get" action="http://docs.pylonshq.com/pyramid/dev/search.html">
-  <div>
-    <input type="text" id="q" name="q" value="" />
-    <input type="submit" id="x" value="Search" />
-  </div>
-</form>
+<p><a href="${url.app}?flash=1">Display a flash message.</a></p>
 
 <h2>Pyramid links</h2>
 <ul>
@@ -45,3 +39,14 @@
   <li>
       <a href="irc://irc.freenode.net#pyramid">IRC Channel</a>
   </li>
+</ul>
+
+
+<h2>Search Pyramid documentation</h2>
+<form method="get" action="http://docs.pylonshq.com/pyramid/dev/search.html">
+  <div>
+    <input type="text" id="q" name="q" value="" />
+    <input type="submit" id="x" value="Search" />
+  </div>
+</form>
+
